...
          }}
        />
        <Tabs.Screen
          name="library"
          options={{
            title: 'Library',
            tabBarButtonTestID: 'tab-library',
            tabBarAccessibilityLabel: 'Library Tab',
            tabBarIcon: ({ focused }) => (
              <TabIcon name="Book" focused={focused} />
            ),
          }}
        />
...
